
- fixed Content-Type header parsing (bug #1346495)
- Unicode build of wxWidgets 2.6 is now required
- fixed bug with entering numbers when using German translation (#1325590)
- fixed broken layout on startup when showing comments window (#1313612)
- initial Mac OS X port
- fixed crash when loading some invalid PO files (#1495970)
- fixed the Find window to not be on top of other apps' windows
- added more translations:
     Macedonian (Jovan Kostovski)
     Arabic (Mohammed al zaid)
     Thai (Pun)


Version 1.3.4
-------------

- fixed crash when closing the application
- fixed searching in catalogs (bug #1230857)
- fixed restoring window size when maximized
- fixed reading of files with trailing whitespace on lines
- use standard accelerators for Close command
- fixed "Copy original to translation field" to work on singular form entries
  in catalogs that contain plural forms
- added Tatarish translation (Albert Fazli)


Version 1.3.3
-------------

- added ability to create bookmarks (Olivier Sannier)
- improved status icons (Olivier Sannier)
- more robust parsing of catalog headers
- saving into read-only file now fails as expected
- fixed saving of gettext keywords with commas in them
- added more translations:
     Galician (Leandro Regueiro)
     Indonesian (Bayu Artanto)
     Friulian (Andrea Decorte)
     Finnish (Keikki Suopanki)


Version 1.3.2
-------------

- fixed bogus warnings when updating from a POT file
- added "New catalog from POT file" feature
- added ability to display automatic comments in the UI (Olivier Sannier)
- translations manager now searches subdirectories as well (David Fraser)
- the Find tool can now optionally search from current position instead of
  from the beginning of the catalog (Olivier Sannier)
- fixed TM to not crash on catalogs with non-ASCII msgid values
- fixed catalog parser to correctly preserve automatic comments with
  duplicate lines and to not ignore every second automatic comment
  (Olivier Sannier)