@@ -1,10 +1,12 @@
 [Desktop Entry]
+Encoding=UTF-8
 Name=poEdit
 Comment=Gettext catalogs editor
 Comment[fr]=Outil de traduction
-MimeType=application/x-po;application/x-gettext
+MimeType=application/x-po;application/x-gettext;application/x-gettext-translation;text/x-gettext-translation;text/x-po;
 Exec=poedit
 Icon=poedit.png
 Terminal=false
 Type=Application
-Categories=Application;Development;
+Categories=Application;Development;Translation;
+StartupNotify=true
