@@ -1,5 +1,0 @@
-
-application/x-po:
-	open=poedit %f
-	view=poedit %f
-	icon-filename=@GNOME_DATA_DIR@/pixmaps/poedit.xpm
