@@ -1,4 +1,0 @@
-# mime types for poEdit...
-
-application/x-po
-	ext: po
