@@ -1,8 +1,0 @@
-# KDE Config File
-[KDE Desktop Entry]
-Type=MimeType
-Mimetype=application/x-po
-Icon=poedit.png
-Patterns=*.po;
-Comment=gettext message catalog
-DefaultApp=poedit
