@@ -1,4 +1,6 @@
 
+SUBDIRS = icons
+
 RESCOMP = @RESCOMP@
 WX_LIBS = @WX_LIBS@
 RC_WX_INCLUDES = @RC_WX_INCLUDES@
