@@ -1,0 +1,13 @@
+
+iconsdir=$(datadir)/icons/hicolor
+icons16dir=$(iconsdir)/16x16/apps
+icons32dir=$(iconsdir)/32x32/apps
+icons48dir=$(iconsdir)/48x48/apps
+iconsscalabledir=$(iconsdir)/scalable/apps
+pixmapsdir=$(datadir)/pixmaps
+
+icons16_DATA = appicon/16x16/poedit.png
+icons32_DATA = appicon/32x32/poedit.png
+icons48_DATA = appicon/48x48/poedit.png
+pixmaps_DATA = appicon/48x48/poedit.png
+iconsscalable_DATA = appicon/poedit.svg
