@@ -9,6 +9,7 @@ Version 1.3.5
 - initial Mac OS X port
 - fixed crash when loading some invalid PO files (#1495970)
 - fixed the Find window to not be on top of other apps' windows
+- install .desktop files and icons according to freedesktop.org standards
 - added more translations:
      Macedonian (Jovan Kostovski)
      Arabic (Mohammed al zaid)
